Fix some minor bug

--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,9 @@
     "author": "Natelyt",
     "chrome_url_overrides": {
         "newtab": "index.html"
-    }
+    },
+    "permissions": [
+        "storage",
+        "unlimitedStorage"
+    ]
 }
