--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
     "manifest_version": 3,
     "name": "Wibi New Tab",
-    "version": "1.1.0",
+    "version": "1.7.0",
     "description": "Trang tab mới tùy chỉnh",
-    "author": "Natelyt",
+    "author": "Phúc Thanhh",
     "chrome_url_overrides": {
         "newtab": "index.html"
     },
